pkg/provider/kubernetes/ingress/fixtures/Ingress-Two-rules-with-one-host-and-one-path_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - host: traefik.tchouk
    http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix
  - host: traefik.courgette
    http:
      paths:
      - path: /carotte
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix
